# rust-todo

./: Cargo.toml  TODO.md  data.msgpack  db.txt
src/: main.rs
src/config/: settings.rs
src/input/: action_argument.rs  argument_type.rs  input_error.rs  mod.rs  prompter.rs
src/service/: mod.rs  win_service.rs
src/state/actions/: action_payload.rs  action_type.rs  mod.rs
src/todos/: command_error.rs  mod.rs  todolist.rs
src/utils/: cereal.rs  fs.rs  general.rs  mod.rs  timed.rs
